syntax = "proto3";

package channel;

service ChannelService {
  rpc CreateChannel (CreateChannelRequest) returns (ChannelResponse) {}
  rpc GetChannelsByServer (GetChannelsByServerRequest) returns (ChannelListResponse) {}
  rpc UpdateChannel (UpdateChannelRequest) returns (ChannelResponse) {}
  rpc DeleteChannel (DeleteChannelRequest) returns (ChannelResponse) {}
}

message CreateChannelRequest {
  string serverId = 1;
  string userId = 2;
  string name = 3;
  string type = 4;
  bool isPrivate = 5;
}

message GetChannelsByServerRequest {
  string serverId = 1;
  string userId = 2;
  string query = 3;
}

message UpdateChannelRequest {
  string channelId = 1;
  string userId = 2;
  string name = 3;
  string type = 4;
  bool isPrivate = 5;
}

message DeleteChannelRequest {
  string channelId = 1;
  string userId = 2;
}

message GetChannelResponse {
  string id = 1;
  string serverId = 2;
  string name = 3;
  string type = 4;
  string createdAt = 5;
  bool isPrivate = 6;
}

message ChannelResponse {
  string message = 1;
}

message ChannelListResponse {
  repeated GetChannelResponse channels = 1;
}